style.css
/* ... */
@media(min-width: 600px) {

    h3 {
        font-size: 1.6rem;
    }

    /***************NAV****************/

    .farve {
        background-color: #d67da5;
        box-shadow: none;
    }

    .logo_pink_kontakt {
        background-image: url(SVG/logo_planet_lyseroed.svg);
    }

    .usynlig_ned_knap {
        top: 90%;
        left: 50%;
    }

    /****************UNIVERS****************/

    .splash {
        height: 100vh;
        width: 100vw;
        position: absolute;
        top: 0;
    }

    .vores_univers_svg1 {
        display: none;
    }

    .vores_univers_svg2 {
        display: block;
        object-fit: cover;
        object-position: 50% 90%;
        width: 100vw;
        height: 100vh;
        z-index: 10;
        position: absolute;
        left: 0;
    }

    #indhold_univers {
        background-color: white;
        width: 100vw;
        position: absolute;
        z-index: 2;
        left: 0;
        top: 100vh;
    }

    .univers_grid {
        margin: 15px 15px;
    }

    .univers_hvid_box {
        opacity: 0;
        transition: .3s;
    }

    .univers_article:hover .univers_hvid_box {
        opacity: 1;
        transition: .3s;
    }


    /****************SHOP****************/

    .shop_svg1 {
        display: none;
    }

    .shop_svg2 {
        display: block;
        object-fit: cover;
        object-position: 50% 90%;
        width: 100vw;
        height: 100vh;
        z-index: 10;
        position: absolute;
    }

    #indhold_shop {
        width: 100vw;
        position: absolute;
        z-index: 2;
        left: 0;
        top: 100vh;
    }

    .faste_varer {
        padding: 60px 80px 30px 80px;
    }

    .pris {
        font-size: 1.1rem;
    }

    .knap_container {
        padding: 25px 130px;
    }

    .shop-grid {
        grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
        margin: 0 80px 130px 80px;
    }

    header {
        height: 100vh;
    }

    #collage h2 {
        padding: 60px 80px 30px 80px;

    }

    .collage_wrapper {
        width: 600px;
        position: relative;
        top: 0vh;

    }

    .collage-billede-1 {
        width: 340px;
        left: 20px;
        top: 270px;
    }

    .collage-smiley {
        top: 625px;
        width: 162px;
        left: 390px;

    }

    .collage-billede-2 {
        top: 610px;
        width: 340px;
        left: 20px;

    }

    .collage-billede-3 {
        width: 225px;
        right: 16px;
        top: 145px;
    }

    .collage-billede-4 {
        top: 370px;
        width: 225px;
        right: 16px;
    }

    .collage-billede-5 {
        width: 225px;
        left: 360px;
        top: 810px;
    }

    /****************OM OS****************/

    .omOS_svg1 {
        display: none;
    }

    .omOS_svg2 {
        object-fit: cover;
        display: block;
        object-position: 50% 90%;
        width: 100vw;
        height: 100vh;
        z-index: 10;
        position: absolute;
        left: 0;
    }


    .indhold_omOS {
        width: 100vw;
        position: absolute;
        z-index: 2;
        left: 0;
        top: 100vh;
    }


    /****************KONTAKT****************/


    .kontakt_svg2 {
        display: block;
        object-fit: cover;
        object-position: 50% 90%;
        width: 100vw;
        height: 100vh;
        z-index: 10;
        position: absolute;
    }

    .kontakt_svg1 {
        display: none;
    }

    #indhold_kontakt {
        background-color: white;
        width: 100vw;
        position: absolute;
        z-index: 2;
        left: 0;
        top: 100vh;

    }

    #kortcontainer {
        width: 100vw;
        height: 100vh;
    }

    #kortoverflow {
        width: 100vw;
        height: 80vh;
    }

    #kort {
        max-width: 900px;
        max-height: 539.37px;
    }



}

@media(min-width: 800px) {
    .single-view-vare {
        margin: auto;
        margin-top: 7%;
        flex-direction: row;
        padding: 10%;
        padding-top: 0%;
        padding-bottom: 0%;
    }

    .single-view-vare .column {
        max-width: 650px;
        height: 650px;
    }

    .single-view-vare .two {
        margin-top: 54px;
        padding: 0 50px 0 50px;
    }

    .shopfooter {
        position: absolute;
        bottom: -90px
    }
}



@media(min-width: 900px) {
    #indhold_omOS #omos2 {
        flex-direction: row;
        padding: 40px 130px;

    }

    #indhold_omOS #column1 {
        padding-right: 10%;
    }

    #omosvideo {
        width: 80vw;
        height: 45vw;
        display: block;
    }

    .shop-grid {
        grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
        margin: 0 130px 130px 130px;
    }

    .faste_varer {
        padding: 100px 130px 30px 130px;
    }

    #collage h2 {
        padding: 100px 130px 30px 130px;

    }

}
/* ... */

